# semantic-layer-skipping

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: meeting-log.md  references.bib
scripts/: cpu_submit.sh  download_e2e.py  install_gptcache_dataset.sh  run_e2e_jobs.sh  run_threshold_sweep.sh  slurm_submit_population.wilkes3  sync_json.sh
slurm-results/: machine.file.25985944  slurm-25985944.out  slurm-26414115.out
src/: early_exit_analysis.py  initial_experiments.py  lensing.py  runner.py  skipping_analysis.py  store.py  strategies.py  utils.py
src/inference/: runner.py
src/initial_analysis/: early_exit_analysis.py  skipping_analysis.py
src/semantic_layer_skipping/: calibrator.py  main.py  store.py  structures.py  utils.py
src/semantic_layer_skipping/calibration/: calibrator.py  main.py  optimiser.py
src/semantic_layer_skipping/data/: data_loader.py  extractor.py  loader.py
src/semantic_layer_skipping/eval/: main_eval_plots.py  plot_checkpoint_architecture.py  plot_distributions.py  plot_loader.py  plot_quality.py  plot_vector_db.py  threshold_analysis.py  utils.py
src/semantic_layer_skipping/experiment/: config.py  evaluator.py  manager.py  retroactive_evaluator.py
src/semantic_layer_skipping/inference/: base_runner.py  model.py  runner.py  strategies.py  torch_runner.py  transformer_lens_runner.py
src/semantic_layer_skipping/initial_analysis/: early_exit_analysis.py  hidden_state_analysis.py  skipping_analysis.py
